crates/shell/src/shells/snapshots/starbase_shell__shells__pwsh__tests__formats_activate_hook.snap
---
source: crates/shell/src/shells/pwsh.rs
expression: "Pwsh::new().format_hook(Hook::Activate\n{\n    command: \"starbase hook pwsh\".into(), function: \"_starbase_hook\".into(),\n}).unwrap()"
---
function _starbase_hook {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = starbase hook pwsh;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}
