crates/shell/src/shells/snapshots/starbase_shell__shells__pwsh__tests__formats_cd_hook.snap
---
source: crates/shell/src/shells/pwsh.rs
expression: "Pwsh::new().format_hook(hook).unwrap()"
---
function _starbase_hook {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = starbase hook pwsh;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}

if (-not (Get-Variable -Name '_starbase_hook_handler' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_handler = [System.EventHandler[System.Management.Automation.LocationChangedEventArgs]] {
    param([object] $source, [System.Management.Automation.LocationChangedEventArgs] $changedArgs)
    end {
      _starbase_hook
    }
  };

  $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Combine(
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
    $global:_starbase_hook_handler
  );
};
