crates/shell/src/shells/snapshots/starbase_shell__shells__pwsh__tests__formats_context_change_hook.snap
---
source: crates/shell/src/shells/pwsh.rs
expression: "Pwsh::new().format_hook(hook).unwrap()"
---
function _starbase_hook {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = starbase hook pwsh;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}

function _starbase_deactivate {
  $exports = starbase deactivate pwsh;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }

  if (Get-Variable -Name '_starbase_hook_handler' -Scope Global -ErrorAction Ignore) {
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Remove(
      $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
      $global:_starbase_hook_handler
    );
    Remove-Variable -Name '_starbase_hook_handler' -Scope Global;
  }

  if (Get-Variable -Name '_starbase_hook_prompt' -Scope Global -ErrorAction Ignore) {
    Set-Item -Path 'function:global:prompt' -Value $global:_starbase_hook_prompt;
    Remove-Variable -Name '_starbase_hook_prompt' -Scope Global;
  }

  Remove-Item -LiteralPath 'function:_starbase_hook' -ErrorAction Ignore;
  Remove-Item -LiteralPath 'function:_starbase_deactivate' -ErrorAction Ignore;
}

if (-not (Get-Variable -Name '_starbase_hook_handler' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_handler = [System.EventHandler[System.Management.Automation.LocationChangedEventArgs]] {
    param([object] $source, [System.Management.Automation.LocationChangedEventArgs] $changedArgs)
    end {
      _starbase_hook
    }
  };

  $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Combine(
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
    $global:_starbase_hook_handler
  );
};

if (-not (Get-Variable -Name '_starbase_hook_prompt' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_prompt = $function:prompt;

  function global:prompt {
    _starbase_hook;
    & $global:_starbase_hook_prompt;
  }
};
