crates/shell/src/shells/snapshots/starbase_shell__shells__pwsh__tests__formats_register_handlers_hook.snap
---
source: crates/shell/src/shells/pwsh.rs
expression: "Pwsh::new().format_hook(Hook::RegisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
if (-not (Get-Variable -Name '_starbase_hook_on_chdir' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_on_chdir = [System.EventHandler[System.Management.Automation.LocationChangedEventArgs]] {
    param([object] $source, [System.Management.Automation.LocationChangedEventArgs] $changedArgs)
    end {
      _starbase_hook
    }
  };

  $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction = [System.Delegate]::Combine(
    $ExecutionContext.SessionState.InvokeCommand.LocationChangedAction,
    $global:_starbase_hook_on_chdir
  );
};

if (-not (Get-Variable -Name '_starbase_hook_on_prompt' -Scope Global -ErrorAction Ignore)) {
  $global:_starbase_hook_on_prompt = $function:prompt;

  function global:prompt {
    _starbase_hook;
    & $global:_starbase_hook_on_prompt;
  }
};
